inserted placeholder text and fix couple of typos

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>My First Bitstarter</title>
-    <meta name="viewport" content="width=device-width, initial-scale-1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
@@ -28,7 +28,7 @@
       }
 
       /* Landscape phones and down */
-      @media (min-width: 480px) {
+      @media (max-width: 480px) {
        .copy {
          padding: 2.5% 10%;
        }
@@ -204,17 +204,17 @@
         </div>
         <div class="span5 copy">
           <p>
-            Put a bunch of text here (#1)
-            Put a bunch of text here (#1)
-            Put a bunch of text here (#1)
-            Put a bunch of text here (#1)
-            Put a bunch of text here (#1)
-            Put a bunch of text here (#1)
-            Put a bunch of text here (#1)
-            Put a bunch of text here (#1)
-            Put a bunch of text here (#1)
-            Put a bunch of text here (#1)
-            Put a bunch of text here (#1)
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
+            mollis justo velit at nunc. Fusce nec egestas sem. Donec
+            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
+            volutpat lorem ut congue malesuada. In facilisis scelerisque
+            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
+            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
+            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
+            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
+            rutrum, nunc leo tempus nisl, eu mollis justo velit at
+            nunc. Fusce nec egestas sem. Donec fringilla.
           </p>
         </div>
       </div>
@@ -222,17 +222,17 @@
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
           <p>
-            Put a bunch of text here (#1)
-            Put a bunch of text here (#1)
-            Put a bunch of text here (#1)
-            Put a bunch of text here (#1)
-            Put a bunch of text here (#1)
-            Put a bunch of text here (#1)
-            Put a bunch of text here (#1)
-            Put a bunch of text here (#1)
-            Put a bunch of text here (#1)
-            Put a bunch of text here (#1)
-            Put a bunch of text here (#1)
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
+            mollis justo velit at nunc. Fusce nec egestas sem. Donec
+            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
+            volutpat lorem ut congue malesuada. In facilisis scelerisque
+            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
+            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
+            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
+            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
+            rutrum, nunc leo tempus nisl, eu mollis justo velit at
+            nunc. Fusce nec egestas sem. Donec fringilla.
           </p>
        </div>
        <div class="span5 asset">
@@ -262,70 +262,33 @@
             </div>
             <div class="accordion-group">
               <div class="accordion-heading">
- 
+                <a class="accordion-toggle" data-toggle="collapse"
+                   data-parent="#accordion2" href="#collapseTwo">
+                  What's a Frequently Asked Question?
+                </a>
+              </div>
+              <div id="collapseTwo" class="accordion-body collapse">
+                <div class="accordion-inner">
+                  A question which is commonly asked by users.
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
 
-NEXT LINE TO BE ADDED IS 265
+    </div>
 
-
----------------
-    <div class="container">
-     <div class="row navigation">
-       <div class="span2 logo">
-         Logo
-       </div>
-       <div class="span6 blank">
-         Blank
-       </div>
-       <div class="span4 about">
-         About
-       </div>
-     </div>
-     <div class="row heading">
-       <div class="span12">
-         <h1>Bitstarter Title</h1>
-       </div>
-     </div>
-     <div class="row subheading">
-       <div class="span12">
-         <p class="lead">This is my first bitstarter project.</p>
-       </div>
-     </div>
-     <div class="row pitch">
-       <div class="span6 video">
-         Video
-       </div>
-       <div class="span6">
-         <div class="thermometer">
-           Thermometer
-         </div>
-         <div class="order">
-           Order
-         </div>
-         <div class="social">
-           Social
-         </div>
-       </div>
-     </div>
-     <div class="row section1">
-       <div class="span12">
-         Marketing Section 1
-       </div>
-     </div>
-     <div class="row section2">
-       <div class="span12">
-         Marketing Section 2
-       </div>
-     </div>
-     <div class="row faq">
-       <div class="span12">
-         FAQ
-       </div>
-     </div>
-     <div class="row footer">
-       <div class="span12">
-         Footer
-       </div>
-     </div>
-   </div>
-  </body>
+    <!-- Not crucial, but we put this under a CC By-SA 3.0 license. -->
+    <!-- http://creativecommons.org/licenses/ -->
+    <div class="row-fluid footer">
+      <div class="span12">
+        <p>This work is licensed under
+          the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC
+            By-SA 3.0
+          </a>, without all the cruft that would otherwise be
+          put at the bottom of the page.</p>
+      </div>
+    </div>
+  </div>
+ </body>
 </html>
