updated starting page with actual product info

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My First Bitstarter</title>
+    <title>Thumpa-Wumpa</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -112,7 +112,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">Bitstarter</a>
+          <a class="brand" href="#">Thumpa-Wumpa</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
@@ -133,19 +133,19 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Product</h1>
+          <h1>Thumpa-Wumpa</h1>
         </div>
       </div>
       <div class="row-fluid subheading">
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">One sentence description.</p>
+          <p class="lead">Put it on your guitar for some awesome live action fun!</p>
         </div>
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://www.spinloop.net/placeholder/480x300-video-placeholder.png">
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons. -->
@@ -157,17 +157,17 @@
                 different in horizontal and vertical layouts, illustrating
                 media queries. -->
                 <div class="linediv-l">
-                <h3>1000</h3> <p>backers</p>
+                <h3>2</h3> <p>backers</p>
                 </div>
               </div>
               <div class="span4">
                 <div class="linediv-c">
-                  <h3>$6000</h3> <p>of $10,000</p>
+                  <h3>$500</h3> <p>of $25,000</p>
                 </div>
               </div>
               <div class="span4">
                 <div class="linediv-r">
-                <h3>10</h3> <p>days left</p>
+                <h3>100</h3> <p>days left</p>
                 </div>
               </div>
             </div>
@@ -176,8 +176,8 @@
             <!-- Bootstrap progress bar -->
             <!-- http://twitter.github.io/bootstrap/components.html#progress -->
             <div class="thermometer progress active">
-              <div class="bar bar-success" style="width: 60%;"></div>
-              <div class="bar bar-warning" style="width: 40%;"></div>
+              <div class="bar bar-success" style="width: 2%;"></div>
+              <div class="bar bar-warning" style="width: 98%;"></div>
             </div>
           </div>
           <div class="span6 offset3 order">
@@ -200,21 +200,18 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://www.spinloop.net/placeholder/480x300-sender-placeholder.png">
         </div>
         <div class="span5 copy">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
+            Thumpa-Wumpa is a small device that you attach to the head
+            of your guitar. It continuously tracks your guitar's movements
+            and coverts that into actions, sounds, images and more.
+          </p>
+          <p>
+            For example, you can program it to activate a particular sound effect
+            each time you shake the head of your guitar downward twice in
+            a row. The possibilities are almost endless!
           </p>
         </div>
       </div>
@@ -222,21 +219,18 @@
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
+            Thumpa-Wumpa works by transmitting movement data from the
+            Sender (attached to your guitar) wirelessly to a Receiver
+            unit that you place nearby. The Receiver continuously monitors
+            the Sender's data to detect patterns and sequences based on
+            how you move your guitar. It converts those patterns and
+            sequences into actions and outputs that you can control. It
+            can also record the data history and use that to create incredible
+            visualizations of your live performance.
           </p>
        </div>
        <div class="span5 asset">
-         <img class="img-polaroid" src="http://placehold.it/480x300">
+         <img class="img-polaroid" src="http://www.spinloop.net/placeholder/480x300-visualization-placeholder.png">
        </div>
      </div>
 
@@ -251,12 +245,13 @@
               <div class="accordion-heading">
                 <a class="accordion-toggle" data-toggle="collapse"
                    data-parent="#accordion2" href="#collapseOne">
-                  What does FAQ stand for?
+                  How is it powered?
                 </a>
               </div>
               <div id="collapseOne" class="accordion-body collapse">
                 <div class="accordion-inner">
-                  Frequently Asked Question.
+                  The device on your guitar is powered by a small battery pack.
+                  The receiver is powered by wall power.
                 </div>
               </div>
             </div>
@@ -264,12 +259,14 @@
               <div class="accordion-heading">
                 <a class="accordion-toggle" data-toggle="collapse"
                    data-parent="#accordion2" href="#collapseTwo">
-                  What's a Frequently Asked Question?
+                  What kind of range does it have?
                 </a>
               </div>
               <div id="collapseTwo" class="accordion-body collapse">
                 <div class="accordion-inner">
-                  A question which is commonly asked by users.
+                  Senders and receivers can work within a N foot range
+                  of each other although the range is reduced when there
+                  are things in-between (equipment, stands, people, etc.)480
                 </div>
               </div>
             </div>
