--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">Thumpa-Wumpa</a>
+          <a class="brand" href="#">Thumpa-Wumpa!</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
@@ -133,7 +133,7 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Thumpa-Wumpa</h1>
+          <h1>Thumpa-Wumpa!</h1>
         </div>
       </div>
       <div class="row-fluid subheading">
