--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
     <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
     <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,300,400,600,700,800"
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800"
           rel="stylesheet" type="text/css">
     <style type="text/css">
 
@@ -140,18 +140,19 @@
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">Put it on your guitar for some awesome live action fun!</p>
+          <p class="lead">Put this on your guitar for some awesome live action fun!</p>
         </div>
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="http://www.spinloop.net/placeholder/480x300-video-placeholder.png">
+          <img class="img-polaroid" alt="Placeholder" src="http://www.spinloop.net/placeholder/480x300-video-placeholder.png">
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons. -->
         <div class="span5 actions">
+          <div class="row-fluid">
           <div class="span8 offset2">
-            <div class="statistics">
+            <div class="row-fluid statistics">
               <div class="span4">
                 <!-- linediv-l and linediv-r give dividing lines that look
                 different in horizontal and vertical layouts, illustrating
@@ -172,6 +173,7 @@
               </div>
             </div>
           </div>
+          <div class="row-fluid">
           <div class="span10 offset1">
             <!-- Bootstrap progress bar -->
             <!-- http://twitter.github.io/bootstrap/components.html#progress -->
@@ -180,17 +182,23 @@
               <div class="bar bar-warning" style="width: 98%;"></div>
             </div>
           </div>
+          </div>
+          <div class="row-fluid">
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
             <button class="btn btn-success btn-large">Preorder</button>
           </div>
+          </div>
+          <div class="row-fluid">
           <div class="span8 offset2 social">
             <!-- Social buttons are not included in default Bootstrap. -->
             <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
             <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
             <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
           </div>
+          </div>
+        </div>
         </div>
       </div>
 
@@ -200,7 +208,7 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://www.spinloop.net/placeholder/480x300-sender-placeholder.png">
+          <img class="img-polaroid" alt="Placeholder" src="http://www.spinloop.net/placeholder/480x300-sender-placeholder.png">
         </div>
         <div class="span5 copy">
           <p>
@@ -230,7 +238,7 @@
           </p>
        </div>
        <div class="span5 asset">
-         <img class="img-polaroid" src="http://www.spinloop.net/placeholder/480x300-visualization-placeholder.png">
+         <img class="img-polaroid" alt="Placeholder" src="http://www.spinloop.net/placeholder/480x300-visualization-placeholder.png">
        </div>
      </div>
 
