--- a/index.html
+++ b/index.html
@@ -203,9 +203,13 @@
           </div>
           <div class="row-fluid">
           <div class="span6 offset3 order">
-            <!-- Standard Bootstrap button. -->
-            <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
+            <!-- Pre-order with Bitcoin through Coinbase -->
+            <a class="coinbase-button" 
+               data-button-style="custom_large"
+               data-button-text="Preorder with Bitcoin"
+               data-code="04b23a99ae40dfc8779c7d34aee097b6"
+               href="https://coinbase.com/checkouts/04b23a99ae40dfc8779c7d34aee097b6">Preorder With Bitcoin</a>
+            <script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
           </div>
           </div>
           <div class="row-fluid">
